<resources>
    <string name="app_name">FoodZone</string>
    <string name="action_settings">Settings</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="resend"><u>Resend</u></string>
    <string name="network_error">Could not connect at the movement make sure your mobile has Internet connection, please  try again later</string>
    <string name="more_reviews"><u>More reviews</u></string>
    <string name="more_photos"><u>View More</u></string>
    <string name="more_videos"><u>View More</u></string>
    <string name="pick_image_intent_text">Choose an image</string>
    <string name="save_card">Save this Card</string>
    <string name="expiry_date">Expiry Date(MMYYYY)</string>
    <string name="card_holder_name">Cardholder\'s Name</string>
    <string name="auth_failed">Authentication failed, check your email and password or Register</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="select_option">Select an option</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="take_photo">Take Photo</string>

    <string name="new_user_register">New User <u>REGISTER?</u></string>
    <string name="forgot_password"><u>Forgot Password</u></string>
    <string name="continue_text"><u>C o n t i n u e</u></string>

    <string-array name="user_type_list">
        <item>Select User Type</item>
    </string-array>
    <string-array name="category_list">
        <item>Select Category</item>
    </string-array>
    <string-array name="city_list">
        <item>Select City</item>

    </string-array>
    <string-array name="country_list">
        <item>Select Country</item>
    </string-array>
    <string-array name="people_lis">
        <item>Select No.of People</item>
    </string-array>
    <string-array name="hours">
        <item>Select No. of Hours</item>
        <item>1 Hour</item>
        <item>2 Hours</item>
        <item>3 Hours</item>
    </string-array>
    <string-array name="province_list">
        <item>Select Province</item>
    </string-array>
    <string-array name="bed_rooms">
        <item>Select Bed Rooms</item>
        <item>1 BHK</item>
        <item>2 BHK</item>
        <item>3 BHK</item>
        <item>4 BHK</item>
    </string-array>
    <string-array name="rating">
        <item>Select Rating</item>
        <item>1 </item>
        <item>2 </item>
        <item>3 </item>
        <item>4 </item>
        <item>5 </item>
    </string-array>
</resources>