<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:layout_width="@dimen/margin_100"
        android:layout_height="@dimen/margin_100"
        android:layout_gravity="center|top"
        android:layout_marginTop="@dimen/margin_20"
        android:layout_marginBottom="@dimen/margin_10"
        android:src="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/app_name"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text_size_18"
                android:textStyle="bold"
                android:visibility="gone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="E-MAIL"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/edit_text_bg"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="PASSWORD"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/edit_text_bg"
                android:inputType="textPassword"
                android:padding="@dimen/margin_10"
                android:textColor="@color/colorPrimaryDark" />


            <TextView
                android:id="@+id/tvUserTypeLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:text="USER TYPE"
                android:textColor="@android:color/black" />

            <LinearLayout
                android:id="@+id/llUserType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_5"
                android:background="@drawable/edit_text_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingRight="@dimen/margin_5">

                <Spinner
                    android:id="@+id/spUserRole"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:entries="@array/user_type_list" />

                <ImageView
                    android:layout_width="@dimen/margin_20"
                    android:layout_height="@dimen/margin_20"
                    android:rotation="270"
                    android:src="@drawable/back_arrow" />
            </LinearLayout>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20"
                android:background="@drawable/btn_bg"
                android:gravity="center"
                android:paddingLeft="20dp"
                android:paddingTop="5dp"
                android:paddingRight="20dp"
                android:paddingBottom="5dp"
                android:text="LOGIN"
                android:textAllCaps="true"
                android:textColor="@android:color/white" />

            <LinearLayout
                android:id="@+id/llForCustomer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvForgotPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="30dp"
                    android:gravity="center"
                    android:padding="@dimen/margin_10"
                    android:text="@string/forgot_password"
                    android:textColor="@android:color/black" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/tvRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/margin_10"
                    android:text="@string/new_user_register"
                    android:textColor="@android:color/black" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>