<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/rgPaymentType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginRight="@dimen/margin_10"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/margin_10">

        <RadioButton
            android:id="@+id/rbPayByCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="Pay By Card" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <RadioButton
            android:id="@+id/rbPayByCash"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:checked="false"
            android:text="Pay By Cash" />


    </RadioGroup>

    <TextView
        android:id="@+id/tvPickupTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/margin_10"
        android:text="Your order will be ready at 10 : 30"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/text_size_13"
        android:textStyle="normal" />

    <LinearLayout
        android:id="@+id/llPaymentBody"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:src="@drawable/save_card"
                app:tint="@color/colorPrimaryDark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Enter Your Card Details"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:textStyle="normal" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:gravity="left"
            android:text="Name" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/card_holder_name"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:letterSpacing="0.15"
            android:maxLength="30"
            android:padding="10dp"
            android:singleLine="true"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_16" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:gravity="left"
            android:text="Card Number" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etCardNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="Card Number"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:digits="0123456789 "
                android:letterSpacing="0.4"
                android:maxLength="19"
                android:padding="10dp"
                android:singleLine="true"
                android:longClickable="false"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_16" />

            <ImageView
                android:id="@+id/ivCardType"
                android:layout_width="@dimen/margin_50"
                android:layout_height="match_parent"
                android:padding="@dimen/margin_5"
                android:src="@drawable/visa_icon" />
        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:gravity="left"
            android:text="Exp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingRight="@dimen/margin_5">

                <Spinner
                    android:id="@+id/spMonth"
                    android:layout_width="@dimen/margin_100"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:entries="@array/months" />

                <ImageView
                    android:layout_width="@dimen/margin_20"
                    android:layout_height="@dimen/margin_20"
                    android:rotation="270"
                    android:src="@drawable/back_arrow" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_10"
                android:layout_weight="1"
                android:background="@drawable/edit_text_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingRight="@dimen/margin_5">

                <Spinner
                    android:id="@+id/spYear"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:entries="@array/years" />

                <ImageView
                    android:layout_width="@dimen/margin_20"
                    android:layout_height="@dimen/margin_20"
                    android:rotation="270"
                    android:src="@drawable/back_arrow" />
            </LinearLayout>

        </LinearLayout>

        <EditText
            android:id="@+id/etExpiryDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/expiry_date"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:letterSpacing="0.2"
            android:maxLength="6"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_16"
            android:visibility="gone" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:gravity="left"
            android:text="CVV" />

        <EditText
            android:id="@+id/etCVV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_bg"
            android:hint="CVV"
            android:inputType="numberPassword"
            android:letterSpacing="1"
            android:maxLength="3"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_16" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <CheckBox
                android:id="@+id/cbSaveCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/save_card"
                android:textColor="@android:color/black"
                android:textSize="13sp"
                android:textStyle="normal" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnProceed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimaryDark"
        android:text="PROCEED"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_14"
        android:textStyle="bold" />
</LinearLayout>